# star-rail-optimizer

./: .gitconfig  .gitmodules  Cargo.toml
scanned_data/: HSRScanData_20231126_122032.json  HSRScanData_20241014_152542.json  HSRScanData_20250730_111506.json
src/: main.rs
src/character/: acheron.rs  mod.rs
src/client/: hoyowiki_client.rs  mod.rs  project_yatta_client.rs
src/config/: set_bonus.yaml
src/data_fetcher/: hoyowiki_data_fetcher.rs  mod.rs  project_yatta_data_fetcher.rs
src/domain/: base_stats.rs  battle_condition.rs  bonus.rs  character.rs  enemy.rs  hoyowiki.rs  light_cone.rs  mod.rs  relic.rs  relics.rs  scanner_input.rs  tag.rs
src/engine/: evaluator.rs  mod.rs  optimizer.rs  simulated_annealing.rs
src/service/: data_fetcher.rs  mod.rs  scanner_parser_service.rs
src/simulator/: action_bar.rs  battle_field.rs  characters.rs  enemies.rs  input_interface.rs  mod.rs
src/utils/: calculator.rs  mod.rs  trace_title_mapper.rs
test_output/: test_output.json  test_output_2.json  training_log.txt  training_log_2.txt
