[package]
name = "star_rail_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0"
tokio = { version = "1", features = ["full"] }
futures = "0"
kdam = "0"
