[package]
name = "star_rail_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "0"
eyre = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0", features = ["json"] }
tracing = "0"
tracing-subscriber = "0.3"
tokio = { version = "1.40", features = ["full"] }
futures = "0"
kdam = "0"
itertools = "0"
strum_macros = "0"
strum = "0"
rand = "0"
regex = "1"
enum-as-inner = "0"
rayon = "1"
serde_yaml = "0.9"
fasteval = "0"
